[package]
name = "api_server"
version = "0.1.0"
authors = ["Alex Clemmer <clemmer.alexander@gmail.com>"]
edition = "2018"

[dependencies]
futures = "0.1.21"
hyper = "0.12"
im = "12.2.0"
pretty_env_logger = "0.2.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = "0.1.13"
try_opt = "0.1.1"

[dev-dependencies]
